--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,3 +3,128 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  /* min-width: 100vh; */
+  display: flex;
+  justify-content: center;
+  font-family: "Big Shoulders Display", Verdana;
+}
+
+.main-container {
+  max-width: 375px;
+}
+
+/* Header */
+
+.location-container {
+  background-image: url(../assets/mobile/image-map.png);
+  height: 500px;
+  background-repeat: no-repeat;
+}
+
+.button-container {
+  width: 274px;
+  height: 72px;
+  display: flex;
+}
+
+.button-container__array {
+  width: 56px;
+  background-color: #d5966c;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button-container__text {
+  width: 208px;
+  background-color: #151515;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button__text {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 24px;
+  color: #ffffff;
+  letter-spacing: 3.63636px;
+  text-transform: uppercase;
+}
+
+/* Article */
+
+.main-article {
+  background-color: #000000;
+  padding: 48px 16px 56px 16px;
+}
+
+.main-article__heading {
+  font-weight: 900;
+  font-size: 50px;
+  line-height: 45px;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 48px;
+}
+
+.main-article__heading-2 {
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 32px;
+  text-transform: uppercase;
+  color: #d5966c;
+  margin-bottom: 20px;
+}
+
+.main-article__location {
+  font-family: "Outfit";
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 28px;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.main-article__text {
+  font-family: "Outfit";
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 28px;
+  color: #ffffff;
+}
+
+.main-footer {
+  background-color: #d5966c;
+}
+
+.main-footer__container {
+  padding: 48px 30px;
+}
+
+.main-footer__heading {
+  font-size: 24px;
+  text-transform: uppercase;
+  margin-bottom: 38px;
+}
+
+.main-footer__text {
+  font-family: "Outfit";
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 26px;
+  color: #151515;
+  margin-bottom: 38px;
+}
+
+.social-list {
+  list-style: none;
+  display: flex;
+}
+
+.social-list__item {
+  margin-right: 20px;
+  font-size: 24px;
+}
