--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,9 +27,8 @@ a {
 }
 
 .location-container {
-  /* background-image: url(../assets/mobile/image-map.png); */
   height: 500px;
-  /* background-repeat: no-repeat; */
+  background-repeat: no-repeat;
 }
 
 .button-container {
@@ -54,14 +53,6 @@ a {
   align-items: center;
 }
 
-/* .button-container__array:hover {
-  background-color: #151515;
-}
-
-.button-container__text:hover {
-  background-color: #d5966c;
-} */
-
 .button-container:hover .button-container__array {
   background-color: #151515;
 }
@@ -82,7 +73,7 @@ a {
 /* Article */
 
 .main-article {
-  background-color: #000000;
+  background-color: #151515;
   padding: 48px 16px 56px 16px;
 }
 
@@ -158,4 +149,81 @@ a {
 
 .social-list__item:hover {
   color: white;
+}
+
+@media screen and (min-width: 650px) {
+  .main-container {
+    max-width: 768px;
+  }
+
+  .div-1 {
+    background-image: url(../assets/tablet/image-map.png);
+    background-repeat: no-repeat;
+    padding-left: 40px;
+  }
+
+  .main-article {
+    background-color: #151515;
+    padding: 88px 40px 80px 40px;
+    display: flex;
+  }
+
+  .main-article__heading {
+    margin-right: 68px;
+  }
+
+  .main-footer {
+    display: flex;
+    padding: 56px 20px 56px 40px;
+  }
+
+  .main-footer__heading {
+    margin-right: 65px;
+  }
+
+  .main-footer__text {
+    width: 281px;
+    margin-right: 80px;
+    margin-bottom: 0px;
+  }
+
+  .list-item-3 {
+    margin-right: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .main-container {
+    max-width: 1440px;
+  }
+
+  .div-1 {
+    background-image: url(../assets/desktop/image-map.png);
+    background-repeat: no-repeat;
+    padding-left: 156px;
+  }
+
+  .main-article {
+    background-color: #151515;
+    padding: 104px 165px 128px 165px;
+    display: flex;
+  }
+
+  .main-article__heading {
+    margin-right: 220px;
+  }
+
+  .main-footer {
+    padding: 80px 165px 80px 165px;
+  }
+
+  .main-footer__heading {
+    margin-right: 140px;
+  }
+
+  .main-footer__text {
+    width: 100%;
+    margin-right: 280px;
+    margin-bottom: 0px;
+  }
 }
