--- a/CSS/style.css
+++ b/CSS/style.css
@@ -96,6 +96,14 @@ a {
 
 /* Main Article */
 
+.img-1-mobile {
+  display: block;
+}
+
+.img-1-desktop {
+  display: none;
+}
+
 .main-article__container {
   margin-top: 25px;
 }
@@ -279,12 +287,6 @@ a {
     padding: 0 165px;
   }
 
-  .main-footer {
-    max-width: 1440px;
-    display: flex;
-    padding: 80px 165px;
-  }
-
   .main-header {
     background-color: #151515;
     background-image: url(../assets/desktop/image-hero.jpg);
@@ -311,5 +313,45 @@ a {
   .div-2 {
     width: 350px;
     margin-left: 246px;
+  }
+
+  .img-1-mobile {
+    display: none;
+  }
+
+  .img-1-desktop {
+    display: block;
+  }
+
+  .main-article__container {
+    margin-top: 180px;
+    margin-bottom: 30px;
+  }
+
+  .img-2 {
+    width: 100%;
+    height: 720px;
+    margin-right: 30px;
+  }
+
+  .second-article__container {
+    padding: 65px 47px 65px 47px;
+    margin-top: 30px;
+  }
+
+  .main-footer {
+    max-width: 1440px;
+    display: flex;
+    padding: 80px 165px;
+  }
+
+  .main-footer__heading {
+    margin-bottom: 0px;
+    margin-right: 140px;
+  }
+
+  .main-footer__text {
+    margin-bottom: 0px;
+    margin-right: 280px;
   }
 }
